--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -11,7 +11,10 @@
     <applicationSettings>
         <SavegameAutoBackupAgent.Properties.Settings>
             <setting name="ProfilesRepo" serializeAs="String">
-                <value>https://github.com/SaveScum/SaveScumAgent.git</value>
+                <value>https://github.com/SaveScum/SaveScumAgent-profiles.git</value>
+            </setting>
+            <setting name="ProfilesRepoName" serializeAs="String">
+                <value>profiles</value>
             </setting>
         </SavegameAutoBackupAgent.Properties.Settings>
     </applicationSettings>
