--- a/SavegameAutoBackupAgent/Properties/Settings.settings
+++ b/SavegameAutoBackupAgent/Properties/Settings.settings
@@ -3,7 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="ProfilesRepo" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://github.com/SaveScum/SaveScumAgent.git</Value>
+      <Value Profile="(Default)">https://github.com/SaveScum/SaveScumAgent-profiles.git</Value>
+    </Setting>
+    <Setting Name="ProfilesRepoName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">profiles</Value>
     </Setting>
   </Settings>
 </SettingsFile>
