Not sure what I've done
I'm in a really bad mood, my day just turned to shit.

--- a/SavegameAutoBackupAgent.Tests/SavegameAutoBackupAgent.Tests.csproj
+++ b/SavegameAutoBackupAgent.Tests/SavegameAutoBackupAgent.Tests.csproj
@@ -62,6 +62,9 @@
     <Compile Include="GitWrapperTest.CheckRepoStatusAgainstRemote.g.cs">
       <DependentUpon>GitWrapperTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="GitWrapperTest.CloneProfilesRepo.g.cs">
+      <DependentUpon>GitWrapperTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="GitWrapperTest.CloneRepo.g.cs">
       <DependentUpon>GitWrapperTest.cs</DependentUpon>
     </Compile>
