--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -16,6 +16,9 @@
             <setting name="ProfilesRepoName" serializeAs="String">
                 <value>profiles</value>
             </setting>
+            <setting name="ApplicationName" serializeAs="String">
+                <value>SaveScumAgent</value>
+            </setting>
         </SavegameAutoBackupAgent.Properties.Settings>
     </applicationSettings>
 </configuration>
