--- a/AutoBackup/AutoBackupLibrary.csproj
+++ b/AutoBackup/AutoBackupLibrary.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>AutoBackup</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>e2bd816f</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>874114af</NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -75,6 +75,7 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -82,9 +83,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArchiveTools\Archiver.cs" />
-    <Compile Include="ArchiveTools\IArchiver.cs" />
-    <Compile Include="ArchiveTools\ZipArchiver.cs" />
+    <Compile Include="ArchiveTools\ArchiveFormats\IArchiver.cs" />
+    <Compile Include="ArchiveTools\ArchiveFormats\ZipArchiver.cs" />
     <Compile Include="FilesystemWatcher\FilesystemWatcherEvent.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="ArchiveTools\ArchivingEventArgs.cs" />
@@ -164,6 +164,7 @@
       <LastGenOutput>Models.cs</LastGenOutput>
       <DependentUpon>Models.edmx</DependentUpon>
     </Content>
+    <Content Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
@@ -193,6 +194,13 @@
     if not exist "$(TargetDir)amd64" md "$(TargetDir)amd64"
     xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\amd64\*.*" "$(TargetDir)amd64"</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\packages\Fody.1.26.1\build\Fody.targets" Condition="Exists('..\packages\Fody.1.26.1\build\Fody.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Fody.1.26.1\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.26.1\build\Fody.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
