--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Fody" version="1.26.1" targetFramework="net45" developmentDependency="true" />
   <package id="LibGit2Sharp" version="0.22.0-pre20150317225305" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
 </packages>
