--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -1,24 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SavegameAutoBackupAgent.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <applicationSettings>
-        <SavegameAutoBackupAgent.Properties.Settings>
-            <setting name="ProfilesRepo" serializeAs="String">
-                <value>https://github.com/SaveScum/SaveScumAgent-profiles.git</value>
-            </setting>
-            <setting name="ProfilesRepoName" serializeAs="String">
-                <value>profiles</value>
-            </setting>
-            <setting name="ApplicationName" serializeAs="String">
-                <value>SaveScumAgent</value>
-            </setting>
-        </SavegameAutoBackupAgent.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SavegameAutoBackupAgent.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <applicationSettings>
+    <SavegameAutoBackupAgent.Properties.Settings>
+      <setting name="ProfilesRepo" serializeAs="String">
+        <value>https://github.com/SaveScum/SaveScumAgent-profiles.git</value>
+      </setting>
+      <setting name="ProfilesRepoName" serializeAs="String">
+        <value>profiles</value>
+      </setting>
+      <setting name="ApplicationName" serializeAs="String">
+        <value>SaveScumAgent</value>
+      </setting>
+    </SavegameAutoBackupAgent.Properties.Settings>
+  </applicationSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
