--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Fody" version="1.26.1" targetFramework="net45" developmentDependency="true" />
-  <package id="LibGit2Sharp" version="0.22.0-pre20150317225305" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Fody" version="1.28.1" targetFramework="net45" developmentDependency="true" />
+  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
 </packages>
