--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -2,8 +2,14 @@
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FluentMigrator" version="1.5.0.0" targetFramework="net45" />
+  <package id="FluentMigrator.Tools" version="1.5.0.0" targetFramework="net45" />
   <package id="Fody" version="1.28.1" targetFramework="net45" developmentDependency="true" />
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
+  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
+  <package id="MaterialDesignColors" version="0.0.0.0" targetFramework="net45" />
+  <package id="MaterialDesignThemes" version="0.0.0.42" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
 </packages>
