--- a/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
+++ b/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{926E9A82-B9AD-4966-8325-BE6B0F3A44DF}</ProjectGuid>
+    <ProjectGuid>{6521F35B-DEA2-4B2E-BEE4-E51CEEB0CBD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SaveScumAgent.DirectoryWatcher</RootNamespace>
-    <AssemblyName>SaveScumAgent.DirectoryWatcher</AssemblyName>
+    <RootNamespace>SaveScumAgent.Archiver</RootNamespace>
+    <AssemblyName>SaveScumAgent.Archiver</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,11 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SevenZipSharp">
+      <HintPath>..\packages\SevenZipSharp.0.64\lib\SevenZipSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Abstractions">
-      <HintPath>..\packages\System.IO.Abstractions.2.0.0.113\lib\net40\System.IO.Abstractions.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,10 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectoryWatcher.cs" />
-    <Compile Include="DirectoryWatcherEvent.cs" />
-    <Compile Include="IDirectoryWatcher.cs" />
+    <Compile Include="ArchivingEventArgs.cs" />
+    <Compile Include="IArchiver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZipArchiver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -54,10 +54,6 @@
     <ProjectReference Include="..\SavegameAutoBackupAgent\SaveScumAgent.csproj">
       <Project>{A5442C57-BE04-475A-A552-AA9D9E029F52}</Project>
       <Name>SaveScumAgent</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SaveScumAgent.TaskScheduler\SaveScumAgent.TaskScheduler.csproj">
-      <Project>{EC4F1F56-AFA0-4024-97CE-F625CA723F9E}</Project>
-      <Name>SaveScumAgent.TaskScheduler</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
