--- a/SaveScumAgent.Archiver.Tests/SaveScumAgent.Archiver.Tests.csproj
+++ b/SaveScumAgent.Archiver.Tests/SaveScumAgent.Archiver.Tests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SevenZipSharp">
+      <HintPath>..\packages\SevenZipSharp.0.64\lib\SevenZipSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +53,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockSevenZipCompressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZipArchiverTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SaveScumAgent.Archiver\SaveScumAgent.Archiver.csproj">
+      <Project>{6521F35B-DEA2-4B2E-BEE4-E51CEEB0CBD7}</Project>
+      <Name>SaveScumAgent.Archiver</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
