--- a/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
+++ b/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
@@ -46,12 +46,12 @@
     <Compile Include="ArchivingEventArgs.cs" />
     <None Include="GitWrapper.cs.borked" />
     <Compile Include="GitArchiver.cs" />
-    <Compile Include="IArchiver.cs" />
+    <Compile Include="Formats\IArchiver.cs" />
     <Compile Include="ISevenZipCompressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SevenZipArchiver.cs" />
+    <Compile Include="Formats\SevenZipArchiver.cs" />
     <Compile Include="SevenZipCompressorWrapper.cs" />
-    <Compile Include="ZipArchiver.cs" />
+    <Compile Include="Formats\ZipArchiver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
