Projects embed DLLs into release binary
Also cleaned up build dependencies

--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -4,6 +4,7 @@
   <configSections>
     <sectionGroup name="applicationSettings"
                   type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SaveScumAgent.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="SavegameAutoBackupAgent.Properties.Settings"
                type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
                requirePermission="false" />
@@ -17,6 +18,20 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <applicationSettings>
+    <SaveScumAgent.Properties.Settings>
+      <setting name="ProfilesRepo" serializeAs="String">
+        <value>https://github.com/SaveScum/SaveScumAgent-profiles.git</value>
+      </setting>
+      <setting name="ProfilesRepoName" serializeAs="String">
+        <value>profiles</value>
+      </setting>
+      <setting name="ApplicationName" serializeAs="String">
+        <value>SaveScumAgent</value>
+      </setting>
+      <setting name="SevenZipDllResource" serializeAs="String">
+        <value>SaveScumAgent.Resources.7z.dll</value>
+      </setting>
+    </SaveScumAgent.Properties.Settings>
     <SavegameAutoBackupAgent.Properties.Settings>
       <setting name="ProfilesRepo" serializeAs="String">
         <value>https://github.com/SaveScum/SaveScumAgent-profiles.git</value>
