--- a/SavegameAutoBackupAgent/Properties/Settings.settings
+++ b/SavegameAutoBackupAgent/Properties/Settings.settings
@@ -1,7 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="SavegameAutoBackupAgent.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SaveScumAgent.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ProfilesRepo" Type="System.String" Scope="Application">
@@ -12,6 +10,9 @@
     </Setting>
     <Setting Name="ApplicationName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SaveScumAgent</Value>
+    </Setting>
+    <Setting Name="SevenZipDllResource" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">SaveScumAgent.Resources.7z.dll</Value>
     </Setting>
   </Settings>
 </SettingsFile>
