Adding DotNetZip dependency
SevenZipSharp doesn't fire off progress events for .zip files. Plus,
managed code.

--- a/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
+++ b/SaveScumAgent.Archiver/SaveScumAgent.Archiver.csproj
@@ -68,6 +68,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="LibGit2Sharp">
       <HintPath>..\packages\LibGit2Sharp.0.22.0-pre20150324065655\lib\net40\LibGit2Sharp.dll</HintPath>
     </Reference>
