--- a/SaveScumAgent.Archiver/packages.config
+++ b/SaveScumAgent.Archiver/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="LibGit2Sharp" version="0.22.0-pre20150324065655" targetFramework="net45" />
   <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
 </packages>
