--- a/SaveScumAgent.Archiver.Tests/SaveScumAgent.Archiver.Tests.csproj
+++ b/SaveScumAgent.Archiver.Tests/SaveScumAgent.Archiver.Tests.csproj
@@ -71,6 +71,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip, Version=1.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="SevenZipSharp">
       <HintPath>..\packages\SevenZipSharp.0.64\lib\SevenZipSharp.dll</HintPath>
     </Reference>
@@ -90,6 +94,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MockSevenZipCompressor.cs" />
+    <Compile Include="MockZipFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZipArchiverTest.cs" />
   </ItemGroup>
@@ -114,6 +119,9 @@
     <Content Include="NativeBinaries\x86\7z.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
