--- a/SaveScumAgent.DirectoryWatcher.Test/packages.config
+++ b/SaveScumAgent.DirectoryWatcher.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="System.IO.Abstractions" version="2.0.0.113" targetFramework="net45" />
   <package id="System.IO.Abstractions.TestingHelpers" version="2.0.0.113" targetFramework="net45" />
