--- a/SavegameAutoBackupAgent/Properties/Settings.settings
+++ b/SavegameAutoBackupAgent/Properties/Settings.settings
@@ -14,5 +14,18 @@
     <Setting Name="SevenZipDllResource" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SaveScumAgent.Resources.7z.dll</Value>
     </Setting>
+    <Setting Name="SaveScumContext" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source={APPDATA}\SaveScum\metadata.sdf&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source={APPDATA}\SaveScum\metadata.sdf</Value>
+    </Setting>
+    <Setting Name="SaveScumAppDataDirectory" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">{ApplicationData}\SaveScum</Value>
+    </Setting>
+    <Setting Name="SaveScumAppArchives" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">{ApplicationData}\SaveScum\Archives</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
