--- a/SaveScumAgent.UtilityClasses/SaveScumAgent.UtilityClasses.csproj
+++ b/SaveScumAgent.UtilityClasses/SaveScumAgent.UtilityClasses.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="PathString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecialFolders.cs" />
+    <Compile Include="SpecialFolderHelper.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
