--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -3,6 +3,7 @@
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net45" />
   <package id="FluentMigrator" version="1.5.0.0" targetFramework="net45" />
   <package id="FluentMigrator.Tools" version="1.5.0.0" targetFramework="net45" />
   <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
