--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -10,9 +10,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SaveScumContext" connectionString="Data Source=|DataDirectory|\SaveScum\metadata.sdf" />
+    <add name="SaveScumContext" connectionString="Data Source=|DataDirectory|\SaveScum\metadata.sdf"
+      providerName="System.Data.SqlServerCe.4.0" />
     <add name="SaveScumAgent.Properties.Settings.SaveScumContext"
       connectionString="Data Source={APPDATA}\SaveScum\metadata.sdf" />
+    <add name="ModelDesigner" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SaveScumAgent.Models.ModelDesigner;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="metadataEntities" connectionString="metadata=res://*/metadata.csdl|res://*/metadata.ssdl|res://*/metadata.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;Data Source=|DataDirectory|\SaveScum\metadata.sdf&quot;"
+      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -35,7 +40,7 @@
         <value>{ApplicationData}\SaveScum</value>
       </setting>
       <setting name="SaveScumAppArchives" serializeAs="String">
-        <value>{ApplicationData}\SaveScum\Archives</value>
+        <value>{ApplicationData}\SaveScum\Archives\{GameTitle}</value>
       </setting>
     </SaveScumAgent.Properties.Settings>
     <SavegameAutoBackupAgent.Properties.Settings>
