--- a/SaveScumAgent.Archiver/packages.config
+++ b/SaveScumAgent.Archiver/packages.config
@@ -2,6 +2,8 @@
 
 <packages>
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net45" />
   <package id="LibGit2Sharp" version="0.22.0-pre20150324065655" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
